--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'org.webjars:bootstrap:5.1.3'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+//aws-java-sdk-sns
+    implementation 'com.amazonaws:aws-java-sdk-sns:1.12.112'
 
 }
 
